Regression: Mirror modifier breaks custom normals #108930

Closed
opened 2023-06-13 11:33:54 +02:00 by Robert S · 5 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.68

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-05-12 23:03, hash: 654cfc06c591
Worked: version: 3.6.0 Alpha, branch: main, commit date: 2023-05-09 04:08, hash: c49a0fa474de

Potentially caused by: 17d161f565

Short description of error
I've been testing 3.6 (nVidia Omniverse version) and 4.0 for USD support and noticed that custom normals are broken with mirror modifier.

c49a0fa474 654cfc06c5
image image

Exact steps for others to reproduce the error

  1. Open the attached file in 3.6 or 4.0 and observe how the normals are broken in mirrored parts.
  2. Open the attached file in 3.5 and observe how the normals are fine in the mirrored parts.
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.68 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-05-12 23:03, hash: `654cfc06c591` Worked: version: 3.6.0 Alpha, branch: main, commit date: 2023-05-09 04:08, hash: `c49a0fa474de` Potentially caused by: https://projects.blender.org/blender/blender/commit/17d161f56537d424d369a1dcf4c47d3976842af8 **Short description of error** I've been testing 3.6 (nVidia Omniverse version) and 4.0 for USD support and noticed that custom normals are broken with mirror modifier. | c49a0fa474de | 654cfc06c591 | | -- | -- | | ![image](/attachments/e8cb2e9f-a360-4ff7-90c9-49451f35bd24) | ![image](/attachments/1e4cf15b-016c-45b6-947d-f6d2f98d0a85) | **Exact steps for others to reproduce the error** 1. Open the attached file in 3.6 or 4.0 and observe how the normals are broken in mirrored parts. 2. Open the attached file in 3.5 and observe how the normals are fine in the mirrored parts.
Robert S added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-06-13 11:33:55 +02:00
Iliya Katushenock changed title from Mirror modifier breaks custom normals to Regression: Mirror modifier breaks custom normals 2023-06-13 14:14:35 +02:00
Iliya Katushenock added the
Interest
Modeling
Interest
Modifiers
labels 2023-06-13 14:14:39 +02:00
Iliya Katushenock added this to the 3.6 LTS milestone 2023-06-13 21:13:47 +02:00
@HooglyBoogly
Hans Goudey self-assigned this 2023-06-13 21:15:09 +02:00
Member

Hmm, I don't see a file attached to this report. @RobertS, maybe you forgot to attach it? Thanks.

Hmm, I don't see a file attached to this report. @RobertS, maybe you forgot to attach it? Thanks.

Oh, i did delete this, sorry! (back this now/)

Oh, i did delete this, sorry! (back this now/)

I'm also experiencing this problem, but for me the problem is happening in version 3.5.1.
The normals break right in the middle where vertices merge.

A "semi-workaround" to this is to not make the mirrored vertices merge through the Mirror modifier:
Mirror modifier -> Disable Merge -> Apply
Edit Mode -> Select -> All
Edit Mode -> Mesh -> Clean-Up -> Merge by Distance.

This keeps the custom normals but does make it a touch harder to work with other modifiers like Subdivision Surface since the vertices won't be merged prior to the clean-up leaving it improperly subdivided and sharp at the center.
Mesh Symmetry isn't good at maintaining custom normals either so post-mirror edits become difficult.

Ideally one would be able to keep the Mirror modifier, merge activated and other modifiers below it.

System Information
Operating system: ArchLinux (Flatpak)
Graphics card: RX 570 8G / Mesa 23.1.2-1

Blender Version
Broken: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash: e1ccd9d4a1

Unmirrored but correct normals Mirrored but incorrect normals Mirrored, not merged but correct normals, improper subdivision
NoMirror-ProperNormals.png Mirror-BrokenNormals.png MirrorNoMerge-ProperNormals-ImproperSubdivision.png

Steps to reproduce

  1. Open the attached file in 3.5.1.
  2. Enable Display Split Normals in Viewport Overlays.
  3. Enable the Mirror modifier and see how the Normals change depending on whether the Merge checkbox is enabled or not.
I'm also experiencing this problem, but for me the problem is happening in version 3.5.1. The normals break right in the middle where vertices merge. A "semi-workaround" to this is to not make the mirrored vertices merge through the Mirror modifier: Mirror modifier -> Disable Merge -> Apply Edit Mode -> Select -> All Edit Mode -> Mesh -> Clean-Up -> Merge by Distance. This keeps the custom normals but does make it a touch harder to work with other modifiers like Subdivision Surface since the vertices won't be merged prior to the clean-up leaving it improperly subdivided and sharp at the center. Mesh Symmetry isn't good at maintaining custom normals either so post-mirror edits become difficult. Ideally one would be able to keep the Mirror modifier, merge activated and other modifiers below it. **System Information** Operating system: ArchLinux (Flatpak) Graphics card: RX 570 8G / Mesa 23.1.2-1 **Blender Version** Broken: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash: e1ccd9d4a1d3 | Unmirrored but correct normals | Mirrored but incorrect normals | Mirrored, not merged but correct normals, improper subdivision | | --- | --- | --- | | ![NoMirror-ProperNormals.png](/attachments/592739c7-cca3-4b9d-840b-ded644d1e27f) | ![Mirror-BrokenNormals.png](/attachments/52eb2d62-d56e-4fbf-9839-9557538a3dfb) | ![MirrorNoMerge-ProperNormals-ImproperSubdivision.png](/attachments/3877710d-0cbc-4f68-a5bd-2ae284f22435) | **Steps to reproduce** 1. Open the attached file in 3.5.1. 2. Enable Display Split Normals in Viewport Overlays. 3. Enable the Mirror modifier and see how the Normals change depending on whether the Merge checkbox is enabled or not.
375 KiB

@MVPuccino Hi, please, report this as separate issues, potentially, this already fixed. In this report, first appearance in 3.6 only.

@MVPuccino Hi, please, report this as separate issues, potentially, this already fixed. In this report, first appearance in 3.6 only.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-20 22:33:19 +02:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-06-21 14:03:42 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108930
No description provided.